--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: #ffffff;
+	background-color: var(--color-cream-soft);
 	color: #111827;
 	line-height: 1.5;
 }
@@ -86,6 +86,14 @@ code {
 
 	--topbar-h: 35px;
 	--navbar-h: 70px;
+
+	--color-cream-soft: #f8eee2;
+	--color-cream-thick: #f5e4d3;
+	--color-cream-bg: #f8e7d5;
+	--color-cream-light: #f1d6bc;
+	--color-text-light: #edc0b3;
+	--color-card-bg: #b45c4e;
+	--color-card-light: #9e4e41;
 }
 
 h1,
@@ -99,7 +107,7 @@ h6 {
 }
 
 a {
-	color: var(--color-primary);
+	color: var(--color-cream-bg);
 	text-decoration: none;
 }
 a:hover {
@@ -115,4 +123,12 @@ html,
 body {
 	height: 100%;
 	overflow-x: hidden;
+}
+
+button {
+	cursor: pointer;
+}
+
+.footer-item-content a {
+	color: var(--color-card-bg) !important;
 }
