--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap";
 @import url("assets/scss/style.scss");
+@import "react-quill/dist/quill.snow.css";
 
 @theme {
 	--color-primary: #00927c;
