Update layout and handle bugs

--- a/src/index.css
+++ b/src/index.css
@@ -195,3 +195,28 @@ button {
 		height: 0;
 	}
 }
+
+@keyframes pop {
+	0% {
+		transform: scale(0.3);
+		opacity: 0;
+	}
+	80% {
+		transform: scale(1.15);
+	}
+	100% {
+		transform: scale(1);
+		opacity: 1;
+	}
+}
+
+@keyframes slideUp {
+	0% {
+		transform: translateY(40px);
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
