--- a/src/assets/scss/common/style.scss
+++ b/src/assets/scss/common/style.scss
@@ -1,3 +1,29 @@
 @import url("./form.input.scss");
 @import url("./field.display.scss");
 @import url("./dual.slider.scss");
+
+@keyframes spin-slow {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+.animate-spin-slow {
+	animation: spin-slow 2.5s linear infinite;
+}
+
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+		transform: translateY(5px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+.animate-fade-in {
+	animation: fade-in 0.6s ease forwards;
+}
