--- a/src/assets/scss/common/style.scss
+++ b/src/assets/scss/common/style.scss
@@ -1,6 +1,7 @@
 @import url("./form.input.scss");
 @import url("./field.display.scss");
 @import url("./dual.slider.scss");
+@import url("./quill.scss");
 
 @keyframes spin-slow {
 	0% {
